# ToDo-List

./: Cargo.toml  lib.rs  package-lock.json  package.json  postcss.config.mjs
src/: Cargo.toml
src/components/: TaskForm.tsx  TaskList.tsx
src/hooks/Task/: useSolanaTasks.tsx
src/hooks/Wallet/: useWalletConnection.tsx
src/pages/: _app.tsx  index.tsx
src/utils/: mockSolana.ts  solana.ts
tests/: Cargo.toml  tests.rs
todo-solana-program/: Cargo.toml  README.md
todo-solana-program/src/: error.rs  lib.rs
todo-solana-program/src/instruction/: mod.rs  task_instruction.rs
todo-solana-program/src/processor/: mod.rs  process_instruction.rs  task_processor.rs
todo-solana-program/src/state/: mod.rs  task_state.rs
todo-solana-program/src/tests/: tests.rs
todo-solana-program/src/user/: mod.rs  user_logic.rs
