[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.5"
solana-program = "1.18.3"
spl-discriminator = "0.4.1"

[dev-dependencies]
solana-program-test = "1.18.3"
solana-sdk = "1.18.3"
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread"] }

[lib]
name="todo"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]