[package]
name = "todo-solana-program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = { version = "2.1.10" }
bincode = "1.3.3"
serde = { version = "1.0.217", features = ["derive"] }
borsh = "1.5.5"

[dev-dependencies]
solana-sdk = "2.1.10"
solana-program-test = "2.1.10"
tokio = { version = "1.43.0", features = ["full"] }

[features]
custom-heap = []
custom-panic = []
solana = []  # Added feature for solana target
